fix(header): hide horizontal overflow
Horizontal overflow scrolling in the outer header container was showing
undesirable effects, such as short of background color. Any horizontal
overflow content is now hidden and does not show a scrollbar.

--- a/css/header_wide.css
+++ b/css/header_wide.css
@@ -11,6 +11,7 @@ body {
     height: 91px;
     z-index: 2;
     padding-top: 8px;
+    overflow-x: hidden;
     box-shadow: 0 4px 4px 0 rgb(0 0 0 / 15%);
     background: #FFF290;
     grid-template-columns: 1fr 2fr 1fr;
